--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,8 +13,27 @@ header {
     height: 80px;
     background-color: cadetblue;
     padding: 1rem 15%;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    ul {
+        display: flex;
+        justify-content: center;
+        li{
+            list-style: none;
+        }
+        a{
+            text-decoration: none;
+            margin: 0 1rem;
+            padding: 0.75rem 1rem;
+            background-color: white;
+            color: black;
+            border: 1px solid black;
+        }
+    }
 }
+
+
 footer {
     width: 100%;
     height: 100px;
