--- a/public/css/app.css
+++ b/public/css/app.css
@@ -51,3 +51,35 @@ main h1 {
   margin: 1rem;
 }
 
+.table {
+  border-collapse: collapse;
+  margin: 2rem auto;
+}
+
+.table th,
+.table td {
+  border: 1px solid black;
+  width: 150px;
+  padding: 0.25rem 0.5rem;
+}
+
+.table th {
+  background-color: cadetblue;
+}
+
+.table td {
+  background-color: blanchedalmond;
+}
+
+.table .td-btn {
+  width: 150px;
+  padding: 0;
+  text-align: center;
+}
+
+.table .td-btn button {
+  height: 100%;
+  margin: 0;
+  padding: 0.25rem;
+}
+
